--- a/kr/html/application-create-step1.html
+++ b/kr/html/application-create-step1.html
@@ -37,7 +37,7 @@
   </div>
   <header id="header"></header>
 
-    <main class="list-container view">
+    <main class="list-container view step1">
         <div class="list-inner">
             <section class="info-wrap">
                 <nav class="krds-breadcrumb-wrap" aria-label="현재 경로" id="breadcrumb">
@@ -237,12 +237,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="page-btn-wrap">
-                    <button type="button" class="krds-btn tertiary">목록으로 가기</button>
-                    <button type="button" class="krds-btn primary">사업신청하기</button>
-                </div>
             </section>
-            
+            <div class="page-btn-wrap">
+                <button type="button" class="krds-btn tertiary">목록으로 가기</button>
+                <button type="button" class="krds-btn primary">사업신청하기</button>
+            </div>
 
         </div>
     </main>
