--- a/kr/tmpl/modal.html
+++ b/kr/tmpl/modal.html
@@ -120,3 +120,39 @@
 </section>
 <!-- //사업승계 담당자 변경 -->
 
+<!-- 반려 사유 입력 -->
+<section id="modal-resect" class="krds-modal fade" role="dialog" aria-labelledby="tit_modal-resect">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      
+      <!-- Modal Header -->
+      <div class="modal-header">
+        <h2 id="tit_modal-resect" class="modal-title">반려사유</h2>
+      </div>
+
+      <!-- Modal Contents -->
+      <div class="modal-conts">
+        <div class="conts-area">
+            <textarea class="krds-input" placeholder="반려 사유를 입력해주세요."></textarea>
+        </div>
+      </div>
+
+      <!-- Modal Buttons -->
+      <div class="modal-btn btn-wrap">
+        <button type="button" class="krds-btn medium tertiary close-modal">취소</button>
+        <button type="button" class="krds-btn medium primary close-modal">저장</button>
+      </div>
+
+      <!-- Close Button -->
+      <button type="button" class="krds-btn medium icon btn-close close-modal" aria-label="닫기">
+        <span class="sr-only">닫기</span>
+        <i class="svg-icon ico-popup-close"></i>
+      </button>
+
+    </div>
+  </div>
+
+  <!-- Modal Background -->
+  <div class="modal-back"></div>
+</section>
+<!-- //반려 사유 입력 -->
