chore:게시판페이지추가, 스타일링 수정

--- a/adm/html/member-auditor-edit.html
+++ b/adm/html/member-auditor-edit.html
@@ -57,7 +57,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input disabled" value="saeupcne01" readonly>
+                                <input type="text" class="krds-input large disabled" value="saeupcne01" readonly>
                             </div>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts btn-ico-wrap">
-                                <input type="password" class="krds-input" data-field="password" placeholder="비밀번호를 입력해주세요" value="saeupcne01">
+                                <input type="password" class="krds-input large" data-field="password" placeholder="비밀번호를 입력해주세요" value="saeupcne01">
                                 <button type="button" class="krds-btn medium icon">
                                     <span class="sr-only">보기</span>
                                     <i class="svg-icon ico-pw-visible"></i>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts btn-ico-wrap">
-                                <input type="password" class="krds-input" data-field="password-confirm" placeholder="비밀번호를 다시 입력해주세요" value="1234">
+                                <input type="password" class="krds-input large" data-field="password-confirm" placeholder="비밀번호를 다시 입력해주세요" value="1234">
                                 <button type="button" class="krds-btn medium icon">
                                     <span class="sr-only">보기</span>
                                     <i class="svg-icon ico-pw-visible"></i>
@@ -101,7 +101,7 @@
                         <div class="form-group">
                             <div class="form-group-inner">
                                 <div class="form-conts">
-                                    <select class="krds-form-select medium">
+                                    <select class="krds-form-select large">
                                         <option value="010">010</option>
                                         <option value="011">011</option>
                                         <option value="016">016</option>
@@ -109,11 +109,11 @@
                                 </div>
                                 <span class="separator">-</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="1234">
+                                    <input type="text" class="krds-input large" value="1234">
                                 </div>
                                 <span class="separator">-</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="1234">
+                                    <input type="text" class="krds-input large" value="1234">
                                 </div>
                             </div>
                         </div>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium" value="감사1팀">
+                                <input type="text" class="krds-input large" value="감사1팀">
                             </div>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="122.000.000.000" readonly>
+                                <input type="text" class="krds-input large disabled" value="122.000.000.000" readonly>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="2025-11-01 13:22:12" readonly>
+                                <input type="text" class="krds-input large disabled" value="2025-11-01 13:22:12" readonly>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="2025-11-03 16:22:12" readonly>
+                                <input type="text" class="krds-input large disabled" value="2025-11-03 16:22:12" readonly>
                             </div>
                         </div>
                     </div>
@@ -180,7 +180,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="2025-11-03 18:22:12" readonly>
+                                <input type="text" class="krds-input large disabled" value="2025-11-03 18:22:12" readonly>
                             </div>
                         </div>
                     </div>
