--- a/adm/html/member-supervisor-edit.html
+++ b/adm/html/member-supervisor-edit.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input disabled" value="epkikey1234-e123-e123-epkikey123456789" readonly>
+                                <input type="text" class="krds-input large disabled" value="epkikey1234-e123-e123-epkikey123456789" readonly>
                             </div>
                         </div>
                     </div>
@@ -68,7 +68,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input" value="홍길동">
+                                <input type="text" class="krds-input large" value="홍길동">
                             </div>
                         </div>
                     </div>
@@ -79,7 +79,7 @@
                         <div class="form-group">
                             <div class="form-group-inner">
                                 <div class="form-conts">
-                                    <select class="krds-form-select medium">
+                                    <select class="krds-form-select large">
                                         <option value="041">041</option>
                                         <option value="042">042</option>
                                         <option value="02">02</option>
@@ -87,11 +87,11 @@
                                 </div>
                                 <span class="separator">-</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="123">
+                                    <input type="text" class="krds-input large" value="123">
                                 </div>
                                 <span class="separator">-</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="1234">
+                                    <input type="text" class="krds-input large" value="1234">
                                 </div>
                             </div>
                         </div>
@@ -103,7 +103,7 @@
                         <div class="form-group">
                             <div class="form-group-inner">
                                 <div class="form-conts">
-                                    <select class="krds-form-select medium">
+                                    <select class="krds-form-select large">
                                         <option value="010">010</option>
                                         <option value="011">011</option>
                                         <option value="016">016</option>
@@ -111,11 +111,11 @@
                                 </div>
                                 <span class="separator">-</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="1234">
+                                    <input type="text" class="krds-input large" value="1234">
                                 </div>
                                 <span class="separator">-</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="1234">
+                                    <input type="text" class="krds-input large" value="1234">
                                 </div>
                             </div>
                         </div>
@@ -127,14 +127,14 @@
                         <div class="form-group">
                             <div class="form-group-inner email">
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="a1234">
+                                    <input type="text" class="krds-input large" value="a1234">
                                 </div>
                                 <span class="separator">@</span>
                                 <div class="form-conts">
-                                    <input type="text" class="krds-input medium" value="cne.co.kr">
+                                    <input type="text" class="krds-input large" value="cne.co.kr">
                                 </div>
                                 <div class="form-conts">
-                                    <select class="krds-form-select medium">
+                                    <select class="krds-form-select large">
                                         <option value="직접입력">직접입력</option>
                                         <option value="gmail.com">gmail.com</option>
                                         <option value="naver.com">naver.com</option>
@@ -157,7 +157,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium" value="민주시민교육과">
+                                <input type="text" class="krds-input large" value="민주시민교육과">
                             </div>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="122.000.000.000" readonly>
+                                <input type="text" class="krds-input large disabled" value="122.000.000.000" readonly>
                             </div>
                         </div>
                     </div>
@@ -185,7 +185,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="2025-11-01 13:22:12" readonly>
+                                <input type="text" class="krds-input large disabled" value="2025-11-01 13:22:12" readonly>
                             </div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="2025-11-03 16:22:12" readonly>
+                                <input type="text" class="krds-input large disabled" value="2025-11-03 16:22:12" readonly>
                             </div>
                         </div>
                     </div>
@@ -205,7 +205,7 @@
                         </div>
                         <div class="form-group">
                             <div class="form-conts">
-                                <input type="text" class="krds-input medium disabled" value="2025-11-03 18:22:12" readonly>
+                                <input type="text" class="krds-input large disabled" value="2025-11-03 18:22:12" readonly>
                             </div>
                         </div>
                     </div>
