--- a/adm/html/member-teacher-list.html
+++ b/adm/html/member-teacher-list.html
@@ -149,7 +149,7 @@
                 <li>
                   <div class="w-sort-btn">
                      <a class="krds-btn small secondary open-modal" data-target="modal-download-exel" title="엑셀 다운로드 사유 작성">
-                          엑셀 다운로드 <i class="svg-icon ico-down"></i>
+                        엑셀 다운로드 <i class="svg-icon ico-down"></i>
                      </a>
                   </div>
                 </li>
@@ -239,7 +239,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -248,8 +248,8 @@
                    <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r2" />
+                        <label for="r2"><span class="sr-only">2행 선택</span></label>
                       </div>
                     </td>
                     <td>
@@ -289,7 +289,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -298,8 +298,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r3" />
+                        <label for="r3"><span class="sr-only">3행 선택</span></label>
                       </div>
                     </td>
                     <td>
@@ -339,7 +339,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -348,8 +348,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r4" />
+                        <label for="r4"><span class="sr-only">4행 선택</span></label>
                       </div>
                     </td>
                     <td>
@@ -389,7 +389,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -398,8 +398,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r5" />
+                        <label for="r5"><span class="sr-only">5행 선택</span></label>
                       </div>
                     </td>
                     <td>
@@ -439,7 +439,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -448,8 +448,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r6" />
+                        <label for="r6"><span class="sr-only">6행 선택</span></label>
                       </div>
                     </td>
                     <td>
@@ -489,7 +489,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -498,8 +498,8 @@
                   <tr>
                     <td>
                       <div class="krds-form-check">
-                        <input type="checkbox" class="checkGroup" id="r1" />
-                        <label for="r1"><span class="sr-only">1행 선택</span></label>
+                        <input type="checkbox" class="checkGroup" id="r7" />
+                        <label for="r7"><span class="sr-only">7행 선택</span></label>
                       </div>
                     </td>
                     <td>
@@ -539,7 +539,7 @@
                     <td>2025-07-24</td>
                     <td>2025-07-24</td>
                     <td>
-                      <a href="javascript:void(0)" class="krds-btn small line" title="수정">
+                      <a href="../html/member-teacher-edit.html" target="_self" class="krds-btn small line" title="수정">
                           <i class="svg-icon ico-edit"></i>
                       </a>
                     </td>
@@ -550,8 +550,8 @@
 
             <div class="page-btn-wrap ">
               <div class="btn-wrap">
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택수정</a>
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택삭제</a>
+                <a href="#!" class="krds-btn small tertiary">선택수정</a>
+                <a href="#!" class="krds-btn small tertiary">선택삭제</a>
               </div>
             </div>
           </div>
