--- a/adm/html/operation-privacy-modify.html
+++ b/adm/html/operation-privacy-modify.html
@@ -55,18 +55,18 @@
                     </div>
                     <div class="form-group">
                         <div class="form-conts">
-                            <input type="text" class="krds-input large" data-field="org-name" placeholder="프로그램 명칭을 한글로 입력하세요.">
+                            <input type="text" class="krds-input large" data-field="org-name" placeholder="프로그램 명칭을 한글로 입력하세요." value="선택사업 신청 목록">
                             <div class="search-result-box">
                                 <ul class="result-list">
                                     <li>
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -75,11 +75,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -88,11 +88,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -101,11 +101,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -114,11 +114,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -127,11 +127,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -140,11 +140,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -153,11 +153,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -166,11 +166,11 @@
                                         <div class="search-result">
                                             <div class="name">
                                                 <span class="label">국문명</span>
-                                                <span class="value">선택사업 신청 목록</span>
+                                                <span class="value">공모사업 신청 목록</span>
                                             </div>
                                             <div class="team">
                                                 <span class="label">영문명</span>
-                                                <span class="value">application-selected</span>
+                                                <span class="value">application-selected-1</span>
                                             </div>
                                         </div>
                                         <button type="button" class="select-btn">선택</button>
@@ -252,7 +252,7 @@
                     </div>
                     <div class="form-group">
                         <div class="form-conts">
-                            <input type="text" class="krds-input large disabled" readonly data-field="org-region" placeholder="자동입력">
+                            <input type="text" class="krds-input large disabled" readonly data-field="org-region" placeholder="자동입력" value="application-selected">
                         </div>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                         <div class="form-conts">
                             <div class="krds-check-area">
                                 <div class="krds-form-chip medium">
-                                    <input type="checkbox" class="checkbox" id="chk_chip_1">
+                                    <input type="checkbox" class="checkbox" id="chk_chip_1" checked>
                                     <label class="krds-form-chip-outline" for="chk_chip_1">이름</label>
                                 </div>
                                 <div class="krds-form-chip">
@@ -279,11 +279,11 @@
                                     <label class="krds-form-chip-outline" for="chk_chip_2">연락처(사무실)</label>
                                 </div>
                                 <div class="krds-form-chip">
-                                    <input type="checkbox" class="checkbox" id="chk_chip_3">
+                                    <input type="checkbox" class="checkbox" id="chk_chip_3" checked>
                                     <label class="krds-form-chip-outline" for="chk_chip_3">연락처(휴대폰)</label>
                                 </div>
                                 <div class="krds-form-chip">
-                                    <input type="checkbox" class="checkbox" id="chk_chip_4">
+                                    <input type="checkbox" class="checkbox" id="chk_chip_4" checked>
                                     <label class="krds-form-chip-outline" for="chk_chip_4">이메일</label>
                                 </div>
                                 <div class="krds-form-chip">
@@ -306,7 +306,7 @@
             </div>
             <div class="btn-wrap">
                 <a href="javascript:void(0)" class="krds-btn small tertiary">취소</a>
-                <a href="../html/operation-privacy-log.html" class="krds-btn small primary">등록</a>
+                <a href="../html/operation-privacy-log.html" class="krds-btn small primary">수정등록</a>
             </div>
         </div>
     </div>
