--- a/adm/tmpl/header.html
+++ b/adm/tmpl/header.html
@@ -21,13 +21,13 @@
                 <a href="../html/report-admin-list.html" class="nav-item has-not-depth2" data-menu="report">
                     <span>결과보고관리</span>
                 </a>
-                <a href="#!" class="nav-item" data-menu="operation"> <!--href="../html/operation-program-settings.html"-->
+                <a href="../html/operation-program-settings.html" class="nav-item" data-menu="operation">
                     <span>운영관리</span>
                 </a>
                 <a href="../html/stats-region.html" class="nav-item" data-menu="statistics">
                     <span>통계관리</span>
                 </a>
-                <a href="#!" class="nav-item" data-menu="board"> <!--href="../html/board-admin-notice-list.html"-->
+                <a href="../html/board-admin-notice-list.html" class="nav-item" data-menu="board">
                     <span>게시판관리</span>
                 </a>
             </nav>
