--- a/adm/html/application-admin-all-list.html
+++ b/adm/html/application-admin-all-list.html
@@ -572,12 +572,12 @@
                   <option>미선정</option>
                 </select>
                 으로 일괄적용합니다.
-                <a href="javascript:void(0)" class="krds-btn small tertiary">확인</a>
+                <a href="javascript:void(0)" target="_self" class="krds-btn small tertiary">확인</a>
               </div>
               <div class="btn-wrap">
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택수정</a>
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택삭제</a>
-                <a href="javascript:void(0)" class="krds-btn small tertiary">선택SMS발송</a>
+                <a href="javascript:void(0)" target="_self" class="krds-btn small tertiary">선택수정</a>
+                <a href="javascript:void(0)" target="_self" class="krds-btn small tertiary">선택삭제</a>
+                <a href="javascript:void(0)" target="_self" class="krds-btn small tertiary">선택SMS발송</a>
               </div>
             </div>
           </div>
